// protos to represent the jiffies timesharing objects
//
// the messages here represent the fields for /proc/stat and
// /proc/[pid]/stat to track application behavior by cpu location
//
// refer to https://man7.org/linux/man-pages/man5/proc.5.html
syntax = "proto3";

package eflect.virtualization;

option java_multiple_files = true;
option java_package = "eflect.virtualization";

import "google/protobuf/timestamp.proto";

message VirtualizedEnergy {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
  double energy = 3;
  uint32 id = 4;
}
